--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,15 +1,97 @@
-baseURL: "https://kareem-ghazi.github.io/website/"
 languageCode: en-us
-title: My New Hugo Site
+baseURL: "https://kareem-ghazi.github.io/website/"
+title: Kareem Ghazi
 theme: PaperMod
 
 params:
+  env: production # to enable google analytics, opengraph, twitter-cards and schema.
+  title: ChaninNantasenamat
+  description: "This is the website of Chanin Nantasenamat, Ph.D. and I create educational content on data science. Some of you may know me as the **Data Professor**."
+  keywords: [Blog, Portfolio, Data Science]
+  author: Chanin Nantasenamat
+  # author: ["Me", "You"] # multiple authors
+  #images: ["<link or path of image for opengraph, twitter-cards>"]
+  DateFormat: "January 2, 2006"
+  defaultTheme: auto # dark, light
+  disableThemeToggle: false
+
+  ShowReadingTime: true
+  ShowShareButtons: true
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: false
+  disableSpecial1stPost: false
+  disableScrollToTop: false
+  comments: false
+  hidemeta: false
+  hideSummary: false
+  showtoc: false
+  tocopen: false
+
+  label:
+    text: "Kareem Ghazi"
+    # icon: "images/kareemghazi.png"
+    # iconHeight: 35
+
   profileMode:
     enabled: true
-    title: "Hi" # optional default will be site title
-    subtitle: "This is subtitle"
+    title: "Welcome! \U0001F44B"
+    subtitle: "I'm **Kareem Ghazi**, a curious and passionate second-year **Artificial Intelligence Engineering student** at New Mansoura University, Egypt. 
+    Driven by a profound interest in Computer Vision and Robotics, 
+    I dedicate myself to exploring these fields and open to whatever comes up new."
+    imageUrl: "images/me.jpg"
+    imageWidth: 180
+    imageHeight: 180
+    imageTitle: "Artificial Intelligence Engineer"
     buttons:
-      - name: Archive
-        url: "/archive"
-      - name: Github
-        url: "https://github.com/"
+      - name: Blogs
+        url: blogs
+      - name: Projects
+        url: projects
+
+  socialIcons:
+    - name: youtube
+      url: "http://youtube.com/dataprofessor"
+    - name: medium
+      url: "https://medium.com/@data-professor"
+    - name: twitter
+      url: "https://twitter.com/thedataprof"
+    - name: linkedin
+      url: "https://www.linkedin.com/in/chanin-nantasenamat/"
+    - name: github
+      url: "https://github.com/dataprofessor"
+    - name: buymeacoffee
+      url: "https://www.buymeacoffee.com/dataprofessor"
+
+  cover:
+    hidden: true # hide everywhere but not in structured data
+    hiddenInList: true # hide on list pages and home
+    hiddenInSingle: false # hide on single page
+  
+  fuseOpts:
+    isCaseSensitive: false
+    shouldSort: true
+    location: 0
+    distance: 1000
+    threshold: 0.4
+    minMatchCharLength: 0
+    keys: ["title", "permalink", "summary", "content"]
+  
+  menu:
+    main:
+      - identifier: about
+        name: About
+        url: /about/
+        weight: 4
+      - identifier: blog
+        name: Blogs
+        url: /blogs/
+        weight: 1
+      - identifier: projects
+        name: Projects
+        url: /projects/
+        weight: 2
+      - identifier: infographics
+        name: Infographics
+        url: /infographics/
+        weight: 3
