--- a/hugo.yaml
+++ b/hugo.yaml
@@ -21,10 +21,10 @@ menu:
       name: Experience
       url: /experience
       weight: 40
-    - identifier: resume
-      name: Resume
-      url: "https://github.com/kareem-ghazi"
-      weight: 50
+    # - identifier: resume
+    #   name: Resume
+    #   url: "https://github.com/kareem-ghazi"
+    #   weight: 50
     - identifier: search
       name: Search
       url: /search
